feat(project): complete S14 and activate S15